    Build-Depends-Indep (respectively).  Not all addons support this and
    will trigger an error at load time.  Addon providers should ensure
    that their package provde "dh-sequence-ADDON" and review the
    doc/PROGRAMMING document (in the debhelper source) if they are
    considering to make their addon compatible with these requirements.
    (Closes: #836699)

  [ Frank Schaefer ]
  * dh_installmodules: Also lok for compressed kernel modules
    in addition to uncompressed kernel modules (gz, bz2 or xz).

  [ Adam Borowski ]
  * d/s/lintian-overrides: Override lintian warning about debhelper
    not using debhelper.

 -- Niels Thykier <niels@thykier.net>  Wed, 14 Aug 2019 16:58:16 +0000

debhelper (12.4) unstable; urgency=medium

  * dh: Retroactively remove support for manual dh sequence
    operators (--until, --after, --before and --remaining).
    This breaks about 8 source packages that still rely on this
    feature and have not yet migrated away.  (Closes: #932537)
    Please see the debhelper bug for relevant bug numbers and
    package names.

 -- Niels Thykier <niels@thykier.net>  Mon, 12 Aug 2019 15:07:01 +0000

debhelper (12.3) unstable; urgency=medium

  [ Translations ]
  * Update Portuguese translation (Américo Monteiro)  (Closes: #927394)

  [ Niels Thykier ]
  * dh_installsystemduser: Fix bug that would neuter sorting of unit
    files and make the resulting maintscripts unreproducible.  Thanks
    to Daniel Kahn Gillmor for reporting the bug.  (Closes: #932646)
  * dh_dwz: Remove the -q flag when calling dwz(1).  It is
    sufficiently silently with -q and aids with debugging for others.
    (Closes: #933561, #931792)
  * dh_dwz: Gracefully handle when dwz fails to create a multifile
    but succeeds anyway by default.  The previous behaviour of
    insisting on a multifile can be obtained by explicitly passing
    --dwz-multifile.  (Closes: #933541)
  * dh_dwz: Skip multifile generation for udeb packages.
    (Closes: #933212)