@@ -6,6 +6,7 @@ Uploaders: Niels Thykier <niels@thykier.net>,
 Build-Depends: dpkg-dev (>= 1.18.0~),
                perl:any,
                po4a,
+               dh-sequence-elf-tools,
 Rules-Requires-Root: no
 Standards-Version: 4.4.0
 Testsuite: autopkgtest-pkg-perl
@@ -49,6 +50,7 @@ Replaces: dh-systemd (<< 1.38)
 Suggests: dh-make
 Provides: ${dh:CompatLevels},
           dh-sequence-dwz,
+          dh-sequence-elf-tools,
           dh-sequence-installinitramfs,
           dh-sequence-systemd,
 Multi-Arch: foreign
